--- a/web/src/styles/_dialog.scss
+++ b/web/src/styles/_dialog.scss
@@ -59,4 +59,9 @@
   display: flex;
   gap: 10px;
   justify-content: flex-end;
+  align-items: center;
+
+  button {
+    margin-bottom: 0;
+  }
 }
